<resources>
    <string name="copyright">Copyright (c) 2019, Lee Hounshell. All rights reserved.</string>
    <string name="app_name">BatBot</string>
    <string name="command_batbot">Speak a Command or \'Help\'</string>
    <string name="command_ok">ok</string>
    <string name="command_star">*</string>
    <string name="command_sharp">#</string>
    <string name="refresh">Refresh</string>
    <string name="connect">Connect</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="id_list">ID List:</string>
    <string name="status">Status</string>
    <string name="message">Message from BatBot</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="train">Train</string>
    <string name="delete">Delete</string>
    <string name="please_wait">please wait..</string>
    <string name="captured_image">captured image</string>
    <string name="correct_name">Correct Image Identification</string>
</resources>
