<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/capture_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/batbot"
            android:contentDescription="@string/captured_image">
        </ImageView>

        <TextView
            style="@style/TextStyle"
            android:id="@+id/capture_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical">
        </TextView>

    </FrameLayout>

    <TextView
        android:id="@+id/capture_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/image_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginEnd="8dp"
            android:onClick="onClickDismissImage"
            android:text="@string/delete"
            android:layout_weight="1" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/image_train"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onClickTrainImage"
            android:text="@string/train"
            android:layout_weight="1" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/image_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onClickSaveImage"
            android:text="@string/save"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
